--- a/strona/Stronaa/Stronaa/Pages/_Layout.cshtml
+++ b/strona/Stronaa/Stronaa/Pages/_Layout.cshtml
@@ -23,6 +23,7 @@
                     <li><a asp-page="/Index" class="navbar-brand">Strona główna</a> </li>
                     <li><a asp-page="/About">O nas</a></li>
                     <li><a asp-page="/Contact">Kontakt</a></li>
+                    <li><a asp-page="/Model/Alkohole">Alkohole</a></li>
                     <li>
                         <form class="form-inline pull-right">
                             <input class="form-control" type="search" placeholder="Szukaj" aria-label="Search">
