--- a/StronaV2/StronaV2/WebApplication1/Pages/ALkohole/Edit.cshtml
+++ b/StronaV2/StronaV2/WebApplication1/Pages/ALkohole/Edit.cshtml
@@ -1,13 +1,17 @@
 ﻿@page
-@model WebApplication1.Pages.ALkohole.CreateModel
+@model WebApplication1.Pages.ALkohole.EditModel
+@{
+}
+
 
 
 <br />
-<h2 class="text-info">Dodaj Nowy Alkohol</h2>
+<h2 class="text-info">Edycja Alkoholu</h2>
 
 <div class="border container" style="padding:30px;">
     <form method="post">
-        <div class="text-danger" asp-validation-summary ="ModelOnly"></div>
+        <input type="hidden" asp-for="Alkohol.ID" />
+        <div class="text-danger" asp-validation-summary="ModelOnly"></div>
         <div class="form-group row">
             <div class="col-3">
                 <label asp-for="Alkohol.Nazwa"></label>
@@ -28,7 +32,7 @@
         </div>
         <div class="form-group row ">
             <div class="col-3 offset-3">
-                <input type="submit" value="Dodaj" class="btn btn-primary form-control" />
+                <input type="submit" value="Aktualizuj" class="btn btn-primary form-control" />
 
             </div>
             <div class="col-3">
