--- a/StronaV2/StronaV2/WebApplication1/Pages/Shared/_Layout.cshtml
+++ b/StronaV2/StronaV2/WebApplication1/Pages/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/ALkohole/Index">Lista Alkoholi</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Drinki/Index">Lista Drinków</a>
+                        </li>
                     </ul>
                 </div>
             </div>
